Removed unused #center-slide-link.

--- a/frontend/core/src/main/webapp/static/app/main/footer.html
+++ b/frontend/core/src/main/webapp/static/app/main/footer.html
@@ -19,7 +19,7 @@
       </a>
     </li>
 
-    <li ng-if="hasCenterSlide()" id="center-slide-link" class="justified-element">
+    <li ng-if="hasCenterSlide()" class="justified-element">
       <a href ng-class="isActiveSlide(getCenterSlideName()) && 'active-slide'" ng-click="gotoCenterSlide()">
         <span ng-bind="getCenterSlideHeading()"></span>
       </a>
