--- a/frontend/core/src/main/webapp/static/app/main/omnibar.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibar.html
@@ -205,8 +205,8 @@
   </div>
 
   <ul class="button-row font-small omnibar-footer">
-    <li class="button-container" ng-class="showEditItemScrollerIndicators() ? 'left-of-three' : 'left-of-two'" ng-click="cancelOmnibarEdit()">
-      <button type="button" class="button transparent-button" style="text-align: left;">
+    <li class="button-container" ng-class="showEditItemScrollerIndicators() ? 'left-of-three' : 'left-of-two'">
+      <button type="button" class="button transparent-button" style="text-align: left;" ng-click="cancelOmnibarEdit()">
         <span>cancel</span>
       </button>
     </li>
@@ -227,8 +227,8 @@
       </ul>
     </li>
 
-    <li class="button-container" ng-class="showEditItemScrollerIndicators() ? 'right-of-three' : 'right-of-two'" ng-click="saveOmnibarText()">
-      <button type="button" class="button transparent-button" style="text-align: right;" ng-disabled="!addOmniItem.$valid || isLoading" ng-bind="getOmnibarFooterSaveText()">
+    <li class="button-container" ng-class="showEditItemScrollerIndicators() ? 'right-of-three' : 'right-of-two'">
+      <button type="button" class="button transparent-button" style="text-align: right;" ng-disabled="!addOmniItem.$valid || isLoading" ng-bind="getOmnibarFooterSaveText()" ng-click="saveOmnibarText()">
         <span>save</span>
       </button>
     </li>
