Added analytics trigger to sign up clicks

--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -47,7 +47,7 @@
           </div>
         </p>
         <p>
-          <a href="https://ext.md/launch" class="button"><span>sign up for beta now</span></a><br/>
+          <a href="https://ext.md/launch" class="button" onclick="_gaq.push(['_trackEvent', 'signup', 'beta', 'upper',, false]);"><span>sign up for beta now</span></a><br/>
         </p>
         <p class="first-paragraph">
           extended mind is a productivity app that helps
@@ -177,7 +177,7 @@
         practices, <b>designed to integrate the biological
         and the digital mind</b><br/><br/>
 
-        <a href="https://ext.md/launch" class="button"><span>sign up for beta now</span></a><br/>
+        <a href="https://ext.md/launch" class="button" onclick="_gaq.push(['_trackEvent', 'signup', 'beta', 'lower',, false]);"><span>sign up for beta now</span></a><br/>
         </p>
       </div>
     </div>
