--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -12,15 +12,21 @@
   <link href="custom.css" rel="stylesheet">
   <link rel="shortcut icon" href="favicon.ico"/>
   <script>
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-44203690-1']);
-      _gaq.push(['_trackPageview']);
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
+    ga('create', 'UA-44203690-1', 'auto');
+    ga('send', 'pageview');
+
+    var trackSignupLink = function(type) {
+       ga('send', 'event', 'signup', 'click', type, {'hitCallback':
+         function () {
+         document.location = 'https://ext.md/launch';
+         }
+       });
+    }
   </script>
 </head>
 
@@ -47,7 +53,7 @@
           </div>
         </p>
         <p>
-          <a href="https://ext.md/launch" class="button" onclick="_gaq.push(['_trackEvent', 'signup', 'beta', 'upper',, false]);"><span>sign up for beta now</span></a><br/>
+          <a href="#" class="button" onclick="trackSignupLink('upper'); return false;"><span>sign up for beta now</span></a><br/>
         </p>
         <p class="first-paragraph">
           extended mind is a productivity app that helps
@@ -177,7 +183,7 @@
         practices, <b>designed to integrate the biological
         and the digital mind</b><br/><br/>
 
-        <a href="https://ext.md/launch" class="button" onclick="_gaq.push(['_trackEvent', 'signup', 'beta', 'lower',, false]);"><span>sign up for beta now</span></a><br/>
+        <a href="https://ext.md/launch" class="button" onclick="trackSignupLink('lower'); return false;"><span>sign up for beta now</span></a><br/>
         </p>
       </div>
     </div>
