--- a/frontend/core/src/main/webapp/static/app/dashboard/dashboardSlides.html
+++ b/frontend/core/src/main/webapp/static/app/dashboard/dashboardSlides.html
@@ -1,5 +1,5 @@
 <div ng-show="isFeatureActive('dashboard')" class="swiper-container main-slides" swiper-container="dashboard" swiper-type="main" expected-slides="getExpectedDashboardSlides()" ng-controller="DashboardController">
-  <div class="swiper-wrapper">
+  <div class="swiper-wrapper" ng-class="getIsWebkitScrolling() ? 'webkit-scrolling' : 'no-webkit-scrolling'">
     <div class="swiper-slide" swiper-slide="dashboard/daily" slide-index=0 dashboard-slide="daily" snap-drawer-drag="dashboard"></div>
     <div ng-if="dashboardSlides.length === 3" class="swiper-slide" swiper-slide="dashboard/weekly" slide-index=1 dashboard-slide="weekly"></div>
     <div ng-if="dashboardSlides.length === 3" class="swiper-slide" swiper-slide="dashboard/monthly" slide-index=2 dashboard-slide="monthly"></div>
