--- a/frontend/core/src/main/webapp/static/app/main/main.html
+++ b/frontend/core/src/main/webapp/static/app/main/main.html
@@ -1,18 +1,18 @@
-<div id="menu" ng-include="'static/app/auth/menu.html'" scrollable></div>
+<div id="menu" ng-include="'static/app/auth/menu.html'"></div>
 <div id="feature-container-wrapper">
-    <div id="feature-container" ng-class="[getOmnibarVisibilityClass(), getFooterVisibilityClass()]" ng-controller="MainController" feature-container>
-        <header class="static-page-header" ng-hide="omnibarVisible" ng-include="'static/app/main/staticPageHeader.html'"></header>
-        <div ng-if="omnibarVisible" class="omnibar-animation" omnibar></div>
-        <div ng-if="isFeatureActive('account')" ng-include="'static/app/account/account.html'" include-replace></div>
-        <div ng-if="isFeatureActive('inbox')" ng-include="'static/app/main/inbox.html'" include-replace></div>
-        <div ng-if="isFeatureActive('tasks')" ng-include="'static/app/tasks/tasksSlides.html'" include-replace></div>
-        <div ng-if="isFeatureActive('notes')" ng-include="'static/app/notes/notesSlides.html'" include-replace></div>
-        <div ng-if="isFeatureActive('lists')" ng-include="'static/app/base/lists.html'" include-replace></div>
-        <div ng-if="isFeatureActive('list')" ng-include="'static/app/main/listSlides.html'" include-replace></div>
-        <div ng-if="isFeatureActive('archive')" ng-include="'static/app/archive/archiveSlides.html'" include-replace></div>
-        <div ng-if="isFeatureActive('dashboard')" ng-include="'static/app/dashboard/dashboardSlides.html'" include-replace></div>
-        <div ng-if="isFeatureActive('admin')" ng-include="'static/app/admin/admin.html'" include-replace></div>
-        <div ng-if="isFeatureActive('settings')" ng-include="'static/app/account/settings.html'" include-replace></div>
-        <footer ng-hide="omnibarVisible" ng-include="'static/app/main/footer.html'"></footer>
-    </div>
+  <div id="feature-container" ng-class="[getOmnibarVisibilityClass(), getFooterVisibilityClass()]" ng-controller="MainController" feature-container>
+    <header class="static-page-header" ng-hide="omnibarVisible" ng-include="'static/app/main/staticPageHeader.html'"></header>
+    <div ng-if="omnibarVisible" class="omnibar-animation" omnibar></div>
+    <div ng-if="isFeatureActive('account')" ng-include="'static/app/account/account.html'" include-replace></div>
+    <div ng-if="isFeatureActive('inbox')" ng-include="'static/app/main/inbox.html'" include-replace></div>
+    <div ng-if="isFeatureActive('tasks')" ng-include="'static/app/tasks/tasksSlides.html'" include-replace></div>
+    <div ng-if="isFeatureActive('notes')" ng-include="'static/app/notes/notesSlides.html'" include-replace></div>
+    <div ng-if="isFeatureActive('lists')" ng-include="'static/app/base/lists.html'" include-replace></div>
+    <div ng-if="isFeatureActive('list')" ng-include="'static/app/main/listSlides.html'" include-replace></div>
+    <div ng-if="isFeatureActive('archive')" ng-include="'static/app/archive/archiveSlides.html'" include-replace></div>
+    <div ng-if="isFeatureActive('dashboard')" ng-include="'static/app/dashboard/dashboardSlides.html'" include-replace></div>
+    <div ng-if="isFeatureActive('admin')" ng-include="'static/app/admin/admin.html'" include-replace></div>
+    <div ng-if="isFeatureActive('settings')" ng-include="'static/app/account/settings.html'" include-replace></div>
+    <footer ng-hide="omnibarVisible" ng-include="'static/app/main/footer.html'"></footer>
+  </div>
 </div>
