--- a/frontend/core/src/main/webapp/static/app/account/settings.html
+++ b/frontend/core/src/main/webapp/static/app/account/settings.html
@@ -1,7 +1,7 @@
 <div class="single-page-container">
-  <section class="one-column-grid single-page page" ng-controller="SettingsController" snap-drawer-drag="settings">
+  <section class="one-column-grid single-page page" ng-controller="SettingsController" snap-drawer-drag="settings" snap-drawer-drag-side="left">
     <div class="column">
-      <div ng-hide="omnibarVisible" class="page-content-container single-page-content-container">
+      <div class="page-content-container single-page-content-container">
         <ul class="scroll-container">
           <li class="simple-content">
             <h3>version</h3>
