--- a/frontend/core/src/main/webapp/static/app/tasks/contexts.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/contexts.html
@@ -1,6 +1,6 @@
 <section class="two-column-grid page">
   <div class="column">
-    <div ng-hide="omnibarVisible && isActiveSlide('contexts')" class="page-content-container">
+    <div class="page-content-container">
       <div class="inner-page-content-container" scroll-to swiper-prevent>
         <section ng-init="newContext={title:undefined, tagType:'context'}">
           <h3>contexts</h3>
