--- a/frontend/core/src/main/webapp/static/app/account/account.html
+++ b/frontend/core/src/main/webapp/static/app/account/account.html
@@ -1,7 +1,7 @@
 <div class="single-page-container">
-  <section class="one-column-grid single-page page" ng-controller="AccountController" snap-drawer-drag="account">
+  <section class="one-column-grid single-page page" ng-controller="AccountController" snap-drawer-drag="account" snap-drawer-drag-side="left">
     <div class="column">
-      <div ng-hide="omnibarVisible" class="page-content-container single-page-content-container">
+      <div class="page-content-container single-page-content-container">
         <ul>
           <li class="simple-content">
             <h3>user</h3>
