--- a/frontend/core/src/main/webapp/static/app/admin/admin.html
+++ b/frontend/core/src/main/webapp/static/app/admin/admin.html
@@ -1,7 +1,7 @@
 <div class="single-page-container" ng-controller="AdminController">
-  <section class="one-column-grid single-page page" snap-drawer-drag="admin">
+  <section class="one-column-grid single-page page" snap-drawer-drag="admin" snap-drawer-drag-side="left">
     <div class="column">
-      <div ng-hide="omnibarVisible" class="page-content-container single-page-content-container" ng-switch on="adminMode">
+      <div class="page-content-container single-page-content-container" ng-switch on="adminMode">
         <ul ng-switch-default class="scroll-container">
           <li class="simple-content">
             <h3>users</h3>
