--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -1,7 +1,7 @@
 <div ng-show="isFeatureActive('inbox')" class="single-page-container" ng-controller="InboxController" data-snap-ignore="{{onboardingInProgress ? true : undefined}}">
-  <section id="inbox" class="two-column-grid single-page page" snap-drawer-drag="inbox">
+  <section id="inbox" class="two-column-grid single-page page" snap-drawer-drag="inbox" snap-drawer-drag-side="left">
     <div class="column">
-      <div ng-if="!isLoading" ng-hide="omnibarVisible" class="page-content-container single-page-content-container">
+      <div ng-if="!isLoading" class="page-content-container single-page-content-container">
         <div class="scroll-container" scroll-to>
           <div class="accordion-wrapper">
             <div class="inner-page-content-container" accordion>
