--- a/frontend/core/src/main/webapp/static/app/main/listTasks.html
+++ b/frontend/core/src/main/webapp/static/app/main/listTasks.html
@@ -1,6 +1,6 @@
 <section class="two-column-grid page">
   <div class="column">
-    <div ng-hide="omnibarVisible" class="page-content-container">
+    <div class="page-content-container">
       <div class="inner-page-content-container" scroll-to swiper-prevent>
         <div accordion>
           <h3>tasks</h3>
