Made omnibar drawer and menu drawer working with the rest of the features  * hide drawer only if it exists  * register SnapService snap.js 'animated' callback with ID  * toggle webkit scrolling off when omnibar drawer is open  * clear and hide omnibar after drawer is closed  * omnibar input focus bugfixes

--- a/frontend/core/src/main/webapp/static/app/account/account.html
+++ b/frontend/core/src/main/webapp/static/app/account/account.html
@@ -1,5 +1,5 @@
 <div class="single-page-container">
-  <section class="one-column-grid single-page page" ng-controller="AccountController" snap-drawer-drag="account" snap-drawer-drag-side="left">
+  <section class="one-column-grid single-page page" ng-controller="AccountController" register-element-to-feature="account" register-element-to-feature-snap="left">
     <div class="column">
       <div class="page-content-container single-page-content-container">
         <ul>
