--- a/frontend/core/src/main/webapp/static/app/account/settings.html
+++ b/frontend/core/src/main/webapp/static/app/account/settings.html
@@ -1,5 +1,5 @@
 <div class="single-page-container">
-  <section class="one-column-grid single-page page" ng-controller="SettingsController" snap-drawer-drag="settings" snap-drawer-drag-side="left">
+  <section class="one-column-grid single-page page" ng-controller="SettingsController" register-element-to-feature="settings" register-element-to-feature-snap="left">
     <div class="column">
       <div class="page-content-container single-page-content-container">
         <ul class="scroll-container">
