--- a/frontend/core/src/main/webapp/static/app/admin/admin.html
+++ b/frontend/core/src/main/webapp/static/app/admin/admin.html
@@ -1,5 +1,5 @@
 <div class="single-page-container" ng-controller="AdminController">
-  <section class="one-column-grid single-page page" snap-drawer-drag="admin" snap-drawer-drag-side="left">
+  <section class="one-column-grid single-page page" register-element-to-feature="admin" register-element-to-feature-snap="left">
     <div class="column">
       <div class="page-content-container single-page-content-container" ng-switch on="adminMode">
         <ul ng-switch-default class="scroll-container">
