--- a/frontend/core/src/main/webapp/static/app/base/lists.html
+++ b/frontend/core/src/main/webapp/static/app/base/lists.html
@@ -1,5 +1,5 @@
 <div class="single-page-container">
-  <section class="one-column-grid single-page page" snap-drawer-drag="lists" snap-drawer-drag-side="left" ng-init="newList = {};">
+  <section class="one-column-grid single-page page" register-element-to-feature="lists" register-element-to-feature-snap="left" ng-init="newList = {};">
     <div class="column">
       <div class="page-content-container">
         <div class="inner-page-content-container" scroll-to swiper-prevent>
