--- a/frontend/core/src/main/webapp/static/app/main/omnibar.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibar.html
@@ -1,4 +1,4 @@
-<div class="omnibar-container swiper-no-swiping" data-snap-ignore="true">
+<div ng-if="isOmnibarOpen" class="omnibar-container swiper-no-swiping" data-snap-ignore="true">
 
   <form role="form" name="addOmniItem" ng-submit="saveOmnibarText()" autocapitalize="none" autocorrect="off">
     <div class="form-group">
